# openlaw

./: API.md  CAP_API_DOCUMENTATION.md  CAP_CASELAW_PLUGIN_ARCHITECTURE.md  CAP_DATA_MODELS.md  CAP_DEPLOYMENT_GUIDE.md  CAP_INTEGRATION_GUIDE.md  CAP_TESTING_STRATEGY.md  DEPLOYMENT_GUIDE_CORE.md  EXAMPLES.md  IMPLEMENTATION_PLAN.md  README.md  TEST_SUITE_OVERVIEW.md  USER_STORIES_BUSINESS_STAKEHOLDERS.md  USER_STORIES_DOMAIN_EXPERTS.md  USER_STORIES_LEGAL_PROFESSIONALS.md  USER_STORIES_OVERVIEW.md  USER_STORIES_TECHNICAL_PERSONAS.md  cli_driver.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test_ada_case.txt
.github/workflows/: native-canary.yml  native-ci.yml  native-parity-and-tests.yml  release-parity-notes.yml
config/: courts.yaml  precedent_weights.yaml  statutory_prefs.yaml
config/compliance/: redaction_rules.yml
config/normalize/: courts.yml  reporters.yml
config/policy/: burden.yml
core/: __init__.py  loader.py  model.py  reasoning.py  rules.py  storage.py
core/adapters/: native_bridge.py  pyreason_bridge.py
core/config/: validator.py
core/native/: annotate.py  compiler.py  engine.py  errors.py  facade.py  facts.py  graph.py  grounder.py  interpretation.py  intervals.py  jit.py  labels.py  rules.py  temporal.py  thresholds.py  validator.py
core/rules/: legal_rules.py  native_legal_builder.py
core/rules_native/: native_legal_builder.py
docs/: API_DOCUMENTATION.md  API_USER_STORIES.md  AUDIT_LOG_SCHEMA.md  COMPARISON_OPENLAW_CASELAW_LANCE.md  CONFIGURATION_REFERENCE.md  LEGAL_DATA_COMPLIANCE.md  NATIVE_ENGINE_ARCHITECTURE.md  OPENLAW_API_EXAMPLES.md  OPENLAW_API_GUIDE.md  PLUGIN_DEVELOPMENT_GUIDE.md  TROUBLESHOOTING.md
examples/legal/: min_case_graph.graphml
golden/: README.md
golden/snapshots/: friends_breach_us-ca_t1_sample.json
nlp/: __init__.py  doc_to_graph.py  legal_ner.py
plugins/caselaw/: README.md  __init__.py  plugin.py  plugin.yaml
plugins/caselaw/api/: __init__.py  caselaw_provenance_api.py  query_api.py
plugins/caselaw/config/: __init__.py  config_manager.py  config_validator.py
plugins/caselaw/examples/: basic_usage.py
plugins/caselaw/extraction/: __init__.py  citation_extractor.py  relationship_extractor.py
plugins/caselaw/ingestion/: __init__.py  hf_ingestion_pipeline.py
plugins/employment_law/: __init__.py  ner.py  plugin.py  rules.py
scripts/bench/: native_bench.py
scripts/benchmarks/: perf_benchmark.py
scripts/examples/: mini_end_to_end.py
scripts/golden/: freeze_pyreason_outputs.py  make_corpus.sh
scripts/ingest/: doc_to_graph_cli.py
scripts/migrate/: dual_validate.py
sdk/: __init__.py  plugin.py
test_documents/employment_law/: ada_accommodation_request.txt  flsa_overtime_complaint.txt  test_document_analysis.py  workers_comp_claim.txt  wrongful_termination_incident.txt
tests/: test_config_and_perf.py  test_legal_annotations.py  test_legal_integration.py  test_legal_rules.py
tests/e2e/: test_legal_document_analysis.py  test_plugin_development.py  test_system_integration.py
tests/fixtures/: legal_documents.py
tests/helpers/: legal_assertions.py
tests/integration/: test_us_ca_breach_graphs.py
tests/legal/: test_jurisdiction_hierarchy.py  test_precedent_weighting.py  test_statutory_interpretation.py
tests/native/: test_golden_parity.py  test_intervals.py  test_native_suite.py  test_parity.py
tests/unit/: test_cli_driver.py  test_core_models.py  test_employment_law_plugin.py  test_legal_nlp.py  test_plugin_loader.py  test_plugin_sdk.py  test_reasoning.py  test_storage.py
viz/: graphviz_renderer.py
(+19 files in other folders)
